--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
+    "johnny-five": "^0.9.44",
+    "raspi-io": "^6.0.1",
     "raspicam": "^0.2.13"
   }
 }
